Prepare backend and AI service for deployment with env-based config